---------------------------------------------------------------------------------------------------
Version: 0.1.27
Date: 10.05.2023
  Fixes:
    - Fixed Depencies for PAR Library.
  Info:
    - The for lib mod needing name due to invalid name unde uploade. 
---------------------------------------------------------------------------------------------------
Version: 0.1.26
Date: 10.05.2023
  Features:
    - Initial BETA release
  Fixes:
    - Typos.
  Comaptibility:
    - Marked Nulius Incompatible due to missing tech. If porvided a reason to why i would look in to maybe fixing it.
  Info:
    - Looking for an texture designer modeling person.
---------------------------------------------------------------------------------------------------
Version: 0.1.25
Date: 14.03.2023
  Features:
    - Warning messages will now show if my mod changes functionality of other mods.
  Info:
    - Moved all advanced compatibility to my lib mod for a clean code build.
  Fixes:
    - MK5 Solar had un specified amount of lead plates.
    - Roboport 1 for bob's mods was hidden by the vanilla dissabling section.
  Changes:
    - Vanilla Compatibility moved to lib mod.
    - Solar power production increased was still low compared to reacotrs. It's now closer to reactors production.
    - Tech not being able to be reserched due to dissabled tech. same as one above.
    - Updated redme file on github.
  Thanks:
    - @Honktown for in game chat warnings.
---------------------------------------------------------------------------------------------------
Version: 0.1.24
Date: 23.02.2023
  Changes:
    - Belt Immunity & NVG's, Made elctrical requirement more reasonable to these equipments. U would want MK4 or higher reacotrs
  Compatibility:
    - Bob's power: Laser Tweaked tech to have heat pipes involved. 
    - Bob's power: Laser Tweaked Recipes to have heat pipes involved.
---------------------------------------------------------------------------------------------------
Version: 0.1.23